로그인 페이지 커밋

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="/sy_logo.ico" />
-    <title>Sean's place</title>
+    <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="/Toss_App_Icon.ico" />
+    <title>Sean's space</title>
   </head>
   <body>
     <div id="root"></div>
